@@ -46,6 +46,8 @@ use Error qw(:try);
 use constant FILTER_PATH => ('/bin', '/boot', '/dev', '/etc', '/lib', '/root',
                              '/proc', '/run', '/sbin', '/sys', '/var', '/usr');
 
+use constant FILTER_FS_TYPES => ('vfat', 'msdos');
+
 # Constructor: new
 #
 #     Create the new Samba shares table
@@ -452,6 +454,22 @@ sub _checkSystemShareMountOptions
 
     my $fs = new Sys::Filesystem(mtab => '/etc/mtab');
     my @filesystems = $fs->filesystems(mounted => 1);
+
+    # Get FS type and throw exception if it is VFAT. This FS does not support
+    # ACLs
+    my $type;
+    try {
+        $type = $fs->type($mountPoint);
+    } otherwise {
+        throw EBox::Exceptions::External(__x('Error getting filesystem format in {m}', m => $mountPoint));
+    };
+    foreach my $filter (FILTER_FS_TYPES) {
+        if ($type =~ /^$filter/) {
+            throw EBox::Exceptions::External(
+                __x("Filesystem format '{x}' does not support storing ACLs.", x => $type));
+        }
+    }
+
     my $options;
     try {
         $options = $fs->options($mountPoint);
