@@ -1,4 +1,5 @@
 HEAD
+	+ Add filesystem format check defining system shares
 	+ Revert case sensitive shares. Use new SMB raw client library feature
 	  per packet case sensitive.
 	+ Throw external exception instead internal if error changing user password
